--- a/site/stylesheet.css
+++ b/site/stylesheet.css
@@ -3,9 +3,35 @@ html {
   font-family: "Open Sans", sans-serif;
 }
 
+nav {
+    border-bottom: 1px solid black;
+}
+
+.crumbs ol {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.crumb {
+    display: inline-block;
+}
+
+.crumb a::after {
+    display: inline-block;
+    color: #000;
+    /* content: '>'; */
+    font-size: 80%;
+    font-weight: bold;
+    padding: 0 3px;
+}
+
 h1 {
   font-size: 60px;
   text-align: center;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 p, li {
@@ -26,10 +52,11 @@ table td {
   border: 1px solid #27394C;
   padding: 5px;
   text-align: center;
-
+  font-size: 16px;
 }
 
 table thead {
   background-color: #B3D89C;
   color: #27394C;
+  font-size: 18px;
 }
